fixed z-index from mail-response (it was in front of header, moved below)

--- a/website/termin.scss
+++ b/website/termin.scss
@@ -189,7 +189,7 @@ input[type=date]:invalid {
 
 #erfolgreich, #fehlgeschlagen {
   position: fixed;
-  top: 5vh;
+  top: 55px;
   left: 0;
   right: 0;
   margin: auto;
